@@ -321,6 +321,24 @@ NTSYSAPI NTSTATUS NTAPI ZwOpenFile
 );
 
 // ******************************************************************
+// * ZwCreateFile
+// ******************************************************************
+NTSYSAPI NTSTATUS NTAPI ZwCreateFile
+(
+    OUT PHANDLE             FileHandle,
+    IN  ACCESS_MASK         DesiredAccess,
+    IN  POBJECT_ATTRIBUTES  ObjectAttributes,
+    OUT PIO_STATUS_BLOCK    IoStatusBlock,
+    IN  PLARGE_INTEGER      AllocationSize OPTIONAL,
+    IN  ULONG               FileAttributes,
+    IN  ULONG               ShareAccess,
+    IN  ULONG               CreateDisposition,
+    IN  ULONG               CreateOptions,
+    IN  PVOID               EaBuffer OPTIONAL,
+    IN  ULONG               EaLength
+);
+
+// ******************************************************************
 // * KeDelayExecutionThread
 // ******************************************************************
 NTSYSAPI NTSTATUS NTAPI KeDelayExecutionThread
